Add tracing to our http-client, make NessieClient an interface (#835)
Adds the OpenTracing/OpenTracing/Jaeger HTTP header(s) required for distributed tracing to requests sent by our HTTP client.

Refactors `NessieClient` to an interface, adds a builder, because there were now too many parameters/options.

Renames the term "path" used as the uri for the Nessie server to "uri" and also use the type `java.net.URI` for it.

Fixes #643